--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@awahlig/appfairy",
-  "version": "0.8.6-alpha.0",
+  "version": "0.8.6",
   "description": "A CLI tool to Migrate a Webflow project into a React app",
   "main": "build/appfairy.js",
   "bin": {
