--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@awahlig/appfairy",
-  "version": "0.8.7",
+  "version": "0.8.8-alpha.0",
   "description": "A CLI tool to Migrate a Webflow project into a React app",
   "main": "build/appfairy.js",
   "bin": {
