--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build": "webpack --config webpack_config.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "format": "prettier --config .prettierrc 'src/**/*.js' --write"
   },
   "dependencies": {
     "anzip": "^0.2.0",
@@ -41,6 +42,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.1.0",
     "eslint-loader": "^2.1.0",
+    "prettier": "^2.8.3",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
     "webpack-node-externals": "^1.7.2"
